Aero10: Fix misspelt textbox state

--- a/Source/PresentationTheme.Aero.Win10/Themes/AeroWin10.NormalColor.xaml
+++ b/Source/PresentationTheme.Aero.Win10/Themes/AeroWin10.NormalColor.xaml
@@ -71,27 +71,27 @@
                   <VisualTransition From="BackgroundNormal" To="BackgroundHot" GeneratedDuration="0:00:00.225"/>
                   <VisualTransition From="BackgroundNormal" To="BackgroundDisabled" GeneratedDuration="0:00:00.15"/>
                   <VisualTransition From="BackgroundNormal" To="BackgroundFocused" GeneratedDuration="0:00:00.15"/>
-                  <VisualTransition From="BackgroundNormal" To="BackgroundReadonly" GeneratedDuration="0:00:00"/>
+                  <VisualTransition From="BackgroundNormal" To="BackgroundReadOnly" GeneratedDuration="0:00:00"/>
                   <VisualTransition From="BackgroundHot" To="BackgroundNormal" GeneratedDuration="0:00:00.635"/>
                   <VisualTransition From="BackgroundHot" To="BackgroundHot" GeneratedDuration="0:00:00"/>
                   <VisualTransition From="BackgroundHot" To="BackgroundDisabled" GeneratedDuration="0:00:00.15"/>
                   <VisualTransition From="BackgroundHot" To="BackgroundFocused" GeneratedDuration="0:00:00.15"/>
-                  <VisualTransition From="BackgroundHot" To="BackgroundReadonly" GeneratedDuration="0:00:00"/>
+                  <VisualTransition From="BackgroundHot" To="BackgroundReadOnly" GeneratedDuration="0:00:00"/>
                   <VisualTransition From="BackgroundDisabled" To="BackgroundNormal" GeneratedDuration="0:00:00.225"/>
                   <VisualTransition From="BackgroundDisabled" To="BackgroundHot" GeneratedDuration="0:00:00.225"/>
                   <VisualTransition From="BackgroundDisabled" To="BackgroundDisabled" GeneratedDuration="0:00:00"/>
                   <VisualTransition From="BackgroundDisabled" To="BackgroundFocused" GeneratedDuration="0:00:00"/>
-                  <VisualTransition From="BackgroundDisabled" To="BackgroundReadonly" GeneratedDuration="0:00:00"/>
+                  <VisualTransition From="BackgroundDisabled" To="BackgroundReadOnly" GeneratedDuration="0:00:00"/>
                   <VisualTransition From="BackgroundFocused" To="BackgroundNormal" GeneratedDuration="0:00:00.375"/>
                   <VisualTransition From="BackgroundFocused" To="BackgroundHot" GeneratedDuration="0:00:00"/>
                   <VisualTransition From="BackgroundFocused" To="BackgroundDisabled" GeneratedDuration="0:00:00"/>
                   <VisualTransition From="BackgroundFocused" To="BackgroundFocused" GeneratedDuration="0:00:00"/>
-                  <VisualTransition From="BackgroundFocused" To="BackgroundReadonly" GeneratedDuration="0:00:00"/>
-                  <VisualTransition From="BackgroundReadonly" To="BackgroundNormal" GeneratedDuration="0:00:00"/>
-                  <VisualTransition From="BackgroundReadonly" To="BackgroundHot" GeneratedDuration="0:00:00"/>
-                  <VisualTransition From="BackgroundReadonly" To="BackgroundDisabled" GeneratedDuration="0:00:00"/>
-                  <VisualTransition From="BackgroundReadonly" To="BackgroundFocused" GeneratedDuration="0:00:00"/>
-                  <VisualTransition From="BackgroundReadonly" To="BackgroundReadonly" GeneratedDuration="0:00:00"/>
+                  <VisualTransition From="BackgroundFocused" To="BackgroundReadOnly" GeneratedDuration="0:00:00"/>
+                  <VisualTransition From="BackgroundReadOnly" To="BackgroundNormal" GeneratedDuration="0:00:00"/>
+                  <VisualTransition From="BackgroundReadOnly" To="BackgroundHot" GeneratedDuration="0:00:00"/>
+                  <VisualTransition From="BackgroundReadOnly" To="BackgroundDisabled" GeneratedDuration="0:00:00"/>
+                  <VisualTransition From="BackgroundReadOnly" To="BackgroundFocused" GeneratedDuration="0:00:00"/>
+                  <VisualTransition From="BackgroundReadOnly" To="BackgroundReadOnly" GeneratedDuration="0:00:00"/>
                 </VisualStateGroup.Transitions>
                 <VisualState x:Name="BackgroundNormal"/>
                 <VisualState x:Name="BackgroundHot"/>
@@ -104,7 +104,7 @@
                     </ColorAnimationUsingKeyFrames>
                   </Storyboard>
                 </VisualState>
-                <VisualState x:Name="BackgroundReadonly">
+                <VisualState x:Name="BackgroundReadOnly">
                   <Storyboard>
                     <ColorAnimationUsingKeyFrames Storyboard.TargetName="bg"
                                                   Storyboard.TargetProperty="Background.(SolidColorBrush.Color)">
