--- a/Source/ThemeBrowser/MainWindow.xaml
+++ b/Source/ThemeBrowser/MainWindow.xaml
@@ -28,26 +28,6 @@
       <Setter Property="Background" Value="Transparent"/>
     </Style>
 
-    <GroupStyle x:Key="OriginGroupStyle">
-      <GroupStyle.ContainerStyle>
-        <Style TargetType="{x:Type GroupItem}">
-          <Setter Property="Template">
-            <Setter.Value>
-              <ControlTemplate TargetType="{x:Type GroupItem}">
-                <Expander IsExpanded="True">
-                  <Expander.Header>
-                    <TextBlock FontWeight="Bold" Text="{Binding Items[0].SimpleOrigin}" Margin="5,0,0,0" Width="100"/>
-                  </Expander.Header>
-                  <Expander.Content>
-                    <ItemsPresenter/>
-                  </Expander.Content>
-                </Expander>
-              </ControlTemplate>
-            </Setter.Value>
-          </Setter>
-        </Style>
-      </GroupStyle.ContainerStyle>
-    </GroupStyle>
     <DataTemplate x:Key="ThemePropertyItem" DataType="{x:Type local:ThemePropertyViewModel}">
       <TextBlock Text="{Binding PropertyId}"/>
     </DataTemplate>
@@ -200,121 +180,8 @@
       </Grid>
     </DataTemplate>
 
-    <Style x:Key="PropertiesGridRowStyle" TargetType="{x:Type DataGridRow}">
-      <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"/>
-      <Setter Property="SnapsToDevicePixels" Value="true"/>
-      <Setter Property="Validation.ErrorTemplate" Value="{x:Null}"/>
-      <Setter Property="ValidationErrorTemplate">
-        <Setter.Value>
-          <ControlTemplate>
-            <TextBlock Margin="2,0,0,0" VerticalAlignment="Center" Foreground="Red" Text="!"/>
-          </ControlTemplate>
-        </Setter.Value>
-      </Setter>
-      <Setter Property="Template">
-        <Setter.Value>
-          <ControlTemplate TargetType="{x:Type DataGridRow}">
-            <Border x:Name="DGR_Border"
-                    Background="{TemplateBinding Background}"
-                    BorderBrush="{TemplateBinding BorderBrush}"
-                    BorderThickness="{TemplateBinding BorderThickness}"
-                    SnapsToDevicePixels="True">
-              <SelectiveScrollingGrid>
-                <Grid.ColumnDefinitions>
-                  <ColumnDefinition Width="Auto"/>
-                  <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-
-                <Grid.RowDefinitions>
-                  <RowDefinition Height="*"/>
-                  <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-
-                <DataGridCellsPresenter Grid.Column="1"
-                                        ItemsPanel="{TemplateBinding ItemsPanel}"
-                                        SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-
-                <DataGridRowHeader SelectiveScrollingGrid.SelectiveScrollingOrientation="Vertical"  Grid.RowSpan="2"
-                                   Visibility="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}, Path=HeadersVisibility, Converter={x:Static DataGrid.HeadersVisibilityConverter}, ConverterParameter={x:Static DataGridHeadersVisibility.Row}}"/>
-              </SelectiveScrollingGrid>
-            </Border>
-          </ControlTemplate>
-        </Setter.Value>
-      </Setter>
-      <Style.Triggers>
-        <Trigger Property="IsNewItem" Value="True">
-          <Setter Property="Margin" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}, Path=NewItemMargin}"/>
-        </Trigger>
-      </Style.Triggers>
-    </Style>
-
-    <Style x:Key="PropertiesGridCellStyle" TargetType="{x:Type DataGridCell}">
-      <Setter Property="Background" Value="Transparent"/>
-      <Setter Property="BorderBrush" Value="Transparent"/>
-      <Setter Property="BorderThickness" Value="0"/>
-      <Setter Property="Padding" Value="1"/>
-      <Setter Property="Template">
-        <Setter.Value>
-          <ControlTemplate TargetType="{x:Type DataGridCell}">
-            <Border Background="{TemplateBinding Background}"
-                    BorderBrush="{TemplateBinding BorderBrush}"
-                    BorderThickness="{TemplateBinding BorderThickness}"
-                    SnapsToDevicePixels="True"
-                    Padding="{TemplateBinding Padding}">
-              <ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-            </Border>
-          </ControlTemplate>
-        </Setter.Value>
-      </Setter>
-      <Style.Triggers>
-        <Trigger Property="IsSelected" Value="True">
-          <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"/>
-          <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
-        </Trigger>
-        <Trigger Property="IsEnabled" Value="False">
-          <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
-        </Trigger>
-      </Style.Triggers>
-    </Style>
-
     <DataTemplate x:Key="PropertiesTemplate" DataType="{x:Type local:ThemePropertyContainer}">
-      <Grid>
-        <Grid.Resources>
-          <CollectionViewSource x:Key="PropertiesView" Source="{Binding AllProperties}">
-            <CollectionViewSource.GroupDescriptions>
-              <PropertyGroupDescription PropertyName="SimpleOrigin"/>
-            </CollectionViewSource.GroupDescriptions>
-            <CollectionViewSource.SortDescriptions>
-              <scm:SortDescription PropertyName="SimpleOrigin"/>
-              <scm:SortDescription PropertyName="DisplayName"/>
-            </CollectionViewSource.SortDescriptions>
-          </CollectionViewSource>
-        </Grid.Resources>
-        <DataGrid ItemsSource="{Binding Source={StaticResource PropertiesView}}" IsReadOnly="True"
-                  AutoGenerateColumns="False" GridLinesVisibility="None"
-                  FocusVisualStyle="{x:Null}"
-                  SelectionMode="Single"
-                  SelectionUnit="FullRow"
-                  RowStyle="{StaticResource PropertiesGridRowStyle}"
-                  CellStyle="{StaticResource PropertiesGridCellStyle}">
-          <DataGrid.GroupStyle>
-            <StaticResource ResourceKey="OriginGroupStyle"/>
-          </DataGrid.GroupStyle>
-          <DataGrid.Columns>
-            <DataGridTextColumn Header="Id" Binding="{Binding DisplayName}"/>
-            <DataGridTextColumn Header="Type" Binding="{Binding DisplayPrimitiveType}"/>
-            <DataGridTextColumn Header="Origin" Binding="{Binding Origin}"/>
-            <DataGridTemplateColumn Header="Value" Width="*"
-                                    ClipboardContentBinding="{Binding StringValue}">
-              <DataGridTemplateColumn.CellTemplate>
-                <DataTemplate>
-                  <ContentPresenter Content="{Binding Value}"/>
-                </DataTemplate>
-              </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
-          </DataGrid.Columns>
-        </DataGrid>
-      </Grid>
+      <local:PropertyGrid/>
     </DataTemplate>
     <DataTemplate DataType="{x:Type local:ThemeClassViewModel}">
       <ContentPresenter Content="{Binding}" ContentTemplate="{StaticResource PropertiesTemplate}"/>
