--- a/Source/ThemeBrowser/App.xaml
+++ b/Source/ThemeBrowser/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ThemeBrowser"
-             xmlns:aero="clr-namespace:PresentationTheme.Aero;assembly=PresentationTheme.Aero"
-             xmlns:aero10="clr-namespace:PresentationTheme.Aero.Win10;assembly=PresentationTheme.Aero.Win10">
+             xmlns:aero="clr-namespace:PresentationTheme.Aero;assembly=PresentationTheme.Aero">
   <Application.Resources>
     <DrawingBrush x:Key="CheckeredBrush" Stretch="None" TileMode="Tile"
                   Viewport="0,0,16,16" ViewportUnits="Absolute">
@@ -24,9 +23,9 @@
       <Setter Property="Width" Value="5"/>
     </Style>
 
-    <Style TargetType="{x:Type TreeView}"
-           BasedOn="{StaticResource {x:Static aero10:ExplorerStyles.TreeViewStyleKey}}">
+    <Style TargetType="{x:Type TreeView}">
       <Setter Property="aero:TreeViewService.FullRowSelect" Value="True"/>
+      <Setter Property="aero:ThemeOptions.UseExplorerStyle" Value="True"/>
     </Style>
   </Application.Resources>
 </Application>
