--- a/Source/PresentationTheme.Aero.Win10/Themes/AeroWin10.NormalColor.xaml
+++ b/Source/PresentationTheme.Aero.Win10/Themes/AeroWin10.NormalColor.xaml
@@ -5021,4 +5021,70 @@
       </Trigger>
     </Style.Triggers>
   </Style>
+
+
+  <!-- GroupBox ============================================================ -->
+
+  <BorderGapMaskConverter x:Key="BorderGapMaskConverter"/>
+
+  <Style x:Key="{x:Type GroupBox}" TargetType="{x:Type GroupBox}">
+    <Setter Property="BorderBrush" Value="#FFDCDCDC"/>
+    <Setter Property="BorderThickness" Value="1"/>
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="{x:Type GroupBox}">
+          <Grid SnapsToDevicePixels="True">
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="6"/>
+              <ColumnDefinition Width="Auto"/>
+              <ColumnDefinition Width="*"/>
+              <ColumnDefinition Width="6"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+              <RowDefinition Height="Auto"/>
+              <RowDefinition Height="Auto"/>
+              <RowDefinition Height="*"/>
+              <RowDefinition Height="6"/>
+            </Grid.RowDefinitions>
+            <Border Grid.Row="1"
+                    Grid.RowSpan="3"
+                    Grid.ColumnSpan="4"
+                    Background="{TemplateBinding Background}"
+                    BorderThickness="{TemplateBinding BorderThickness}"
+                    BorderBrush="Transparent"/>
+
+            <Border Grid.Row="1"
+                    Grid.RowSpan="3"
+                    Grid.ColumnSpan="4"
+                    BorderThickness="{TemplateBinding BorderThickness}"
+                    BorderBrush="{TemplateBinding BorderBrush}"
+                    Margin="0,0,0,1">
+              <Border.OpacityMask>
+                <MultiBinding Converter="{StaticResource BorderGapMaskConverter}"
+                              ConverterParameter="7">
+                  <Binding Path="ActualWidth" ElementName="Header"/>
+                  <Binding Path="ActualWidth" RelativeSource="{RelativeSource Self}"/>
+                  <Binding Path="ActualHeight" RelativeSource="{RelativeSource Self}"/>
+                </MultiBinding>
+              </Border.OpacityMask>
+            </Border>
+
+            <Border x:Name="Header"
+                    Padding="3,0,1,0"
+                    Grid.RowSpan="2"
+                    Grid.Column="1">
+              <ContentPresenter ContentSource="Header"
+                                RecognizesAccessKey="True"
+                                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+            </Border>
+            <ContentPresenter Grid.Row="2"
+                              Grid.Column="1"
+                              Grid.ColumnSpan="2"
+                              Margin="{TemplateBinding Padding}"
+                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+          </Grid>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+  </Style>
 </ResourceDictionary>
