--- a/Source/PresentationTheme.AeroLite.Win10/Themes/AeroLiteWin10.NormalColor.xaml
+++ b/Source/PresentationTheme.AeroLite.Win10/Themes/AeroLiteWin10.NormalColor.xaml
@@ -4834,12 +4834,13 @@
     <Setter Property="MinHeight"
             Value="{DynamicResource {x:Static SystemParameters.HorizontalScrollBarHeightKey}}"/>
     <Setter Property="Background" Value="Transparent"/>
+    <Setter Property="Padding" Value="0,0,3,2"/>
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type ResizeGrip}">
           <Grid SnapsToDevicePixels="True" Background="{TemplateBinding Background}">
             <Path Data="M 6,0 8,0 8,8 0,8 0,6 3,6 3,3 6,3 z"
-                  Margin="0,0,3,2"
+                  Margin="{TemplateBinding Padding}"
                   HorizontalAlignment="Right"
                   VerticalAlignment="Bottom">
               <Path.Fill>
